added title in report

--- a/report/main.tex
+++ b/report/main.tex
@@ -7,7 +7,7 @@
 \usepackage{amsfonts}
 
 \begin{document}
-\title{Beautiful title}
+\title{Forest cover type classification using AdaBoost}
 \author{Luca Giuliani, Dario Ostuni}
 \date{}
 \maketitle
