started adaboost chapter [draft]

--- a/report/main.tex
+++ b/report/main.tex
@@ -5,6 +5,8 @@
 \usepackage{graphicx}
 \usepackage{minted}
 \usepackage{amsfonts}
+\usepackage{mathtools}
+\usepackage{amsmath}
 
 \begin{document}
 \title{Forest cover type classification using AdaBoost}
@@ -15,6 +17,7 @@
 \tableofcontents
 
 \input introduction.tex
+\input adaboost.tex
 
 \bibliographystyle{plain}
 \bibliography{local}
