--- a/report/main.tex
+++ b/report/main.tex
@@ -7,6 +7,8 @@
 \usepackage{amsfonts}
 \usepackage{mathtools}
 \usepackage{amsmath}
+\usepackage[noend]{algpseudocode}
+\usepackage{algorithm}
 
 \begin{document}
 \title{Forest cover type classification using AdaBoost}
