--- a/report/adaboost.tex
+++ b/report/adaboost.tex
@@ -4,9 +4,10 @@
 \section{General}
 	The AdaBoost learning meta-algorithm $f$ combines the results of a sequence of basic classifiers with a weighted sum. \\
 	Let the training set be $S=\lbrace (x_{1}, y_{1}),\; \dots\;, (x_{m}, y_{m}) \rbrace$, and be $T$ the hyper-parameter which tells AdaBoost how many iteration must run to perform the prediction. $T$ can be set, for example, through cross validation. Given a base predictor $h_{i} \in \mathbb{H}\;$, which is the set of the base predictors, for each iteration $i = 1,\;\dots\;T$ we set a coefficient $\alpha_{i}$. The base classifiers $h_{i}$ is a simple binary classifier of the form $h:\mathbb{R}^{d}\to\lbrace-1, 1\rbrace$, the base learner is formally described as follow:
-	\begin{align*}
+	\begin{align}
+	\label{eq:weighted_sum}
 		f(x) = \sum_{i=1}^{T}\alpha_{i}h_{i}(x)
-	\end{align*}
+	\end{align}
 	Where $\alpha_{1},\;\dots\;,\alpha_{T}$ are the weight coefficients and are set to be
 	\begin{align*}
 		\alpha_{t} = \frac{1}{2}\ln \Big( \frac{1-\epsilon_{t}}{\epsilon_{t}} \Big) \;\;\;\; \forall t=1,\;\dots\;,T
@@ -29,17 +30,27 @@
 %	\hat{\ell}(f) \leq \exp(-2\sum_{i=1}^{T}\gamma^{2}_{i})
 %\end{align}
 \section{Implementation}
+The implementation code for AdaBoost can be found in the \texttt{AdaBoost} class and it is defined by five attributes:
+\begin{itemize}
+	\item \texttt{dataset} as a smart pointer for better memory management;
+	\item \texttt{w} representing the $w$ vector of the weights distribution over data points;
+	\item \texttt{a} representing the $\alpha$ vector of the weights used in the weighted sum\ref{eq:adaboost_main};
+	\item \texttt{h} representing the vector of the base classifiers, which in our project correspond to the Decision Stumps; and
+	\item \texttt{label} as a 32-bit integer used by the One-Vs-All algorithm in the initialization phase described in this report in chapter \ref{chap:ova}.
+\end{itemize}
+The main algorithm is described in pseudo-code by algorithm (\ref{alg:adaboost}) and its main for loop is implemented by the method \texttt{next\_epoch()}. Each iteration is handled by the \texttt{OneVsAll} class.
 \begin{algorithm}[htpb]
+	\caption{}
 	\label{alg:adaboost}
 	\begin{algorithmic}[]
 		\Procedure{AdaBoost}{$S$, $BASE(\cdot,\cdot)$, $T$}
 		\State $w^{(0)} \gets (1/n,\;\dots\;,1/n)$
 		\For{$t \gets 1 \textbf{ to } T$}
-			\State $h_{t} \gets BASE(S, w^{(t)})$
+			\State $h^{(t)} \gets BASE(S, w^{(t)})$
 			\State $\epsilon_{t} \gets \sum_{i=1}^{n}w_{i}^{(t)}\mathbb{I}\lbrace h^{(t)}(x_{i} \neq y_{i}) \rbrace $
 			\State $\alpha^{(t)} \gets \frac{1}{2}\ln\Big(\frac{1-\epsilon_{t}}{\epsilon_{t}}\Big)$
 			\For{$i\gets1\textbf{ to } n$}
-				\If{$\mathbb{I}\lbrace h^{(t)}(x_{i} \neq y_{i}$}
+				\If{$\mathbb{I}\lbrace h^{(t)}(x_{i} \neq y_{i}\rbrace$}
 					\State $w_{i}^{(t+1)}\gets\frac{w_{i}^{(t)}}{2\epsilon{(t)}}$
 				\Else
 					\State $w_{i}^{(t+1)}\gets\frac{w_{i}^{(t)}}{2(1-\epsilon{(t)})}$
