added chapter 2 for decision stumps. AdaBoost is now chapter 3

--- a/report/main.tex
+++ b/report/main.tex
@@ -19,8 +19,10 @@
 \tableofcontents
 
 \input introduction.tex
+\input decisionstumps.tex
 \input adaboost.tex
 \input onevsall.tex
+
 
 \bibliographystyle{plain}
 \bibliography{local}
