--- a/report/decisionstumps.tex
+++ b/report/decisionstumps.tex
@@ -1,14 +1,14 @@
 % !TeX spellcheck = en_US
 \chapter{Decision Stumps}
 Decision stumps are the base classifiers used by AdaBoost in this project.\\
-It is a three with a node and two leaves and defined by three parameters: an index $j$ for the feature that it cuts (in this project, the features are real numbers), the threshold $\theta$ of the cut and the sign of the decision. A decision stump can be map as the following function:
+It is a tree with a node and two leaves and is defined by three parameters: an index $j$ for the feature that it cuts (in this project, the features are natural numbers), the threshold $\theta$ of the cut and the sign of the decision. A decision stump is mapped as the following function:
 \begin{align}
 \label{eq:dstumps_function}
 	h:\mathbb{R} \to \lbrace-1, +1\rbrace
 \end{align}
-We can call $\mathbb{H}$ the set containing all the possible decision stumps of the form of $h$, such that $h \in \mathbb{H}$. From (\ref{eq:dstumps_function}) the set $\mathbb{H}$ can be partitioned in two subset, one for the \textit{positive stumps} and the other for the \textit{negative stumps} described formally by the following:
+We can call $\mathbb{H}$ the set containing all the possible decision stumps of the form of (\ref{eq:dstumps_function}), such that $h \in \mathbb{H}$. From (\ref{eq:dstumps_function}) the set $\mathbb{H}$ can be partitioned in two subset, one for the \textit{positive stumps} and the other for the \textit{negative stumps} described formally by the following:
 \begin{align}
-h_{t, \theta+}(x) =
+h_{j, \theta+}(x) =
 \begin{cases}
 \;\;\,1       & \quad \text{if } x > \theta\\
 -1  & \quad \text{otherwise}
@@ -20,8 +20,9 @@ h_{j,\theta-}(x) =
 \;\;\,1		& \quad \text{otherwise}
 \end{cases}
 \end{align}
-respectively for positives stumps and negative stumps.\\
-Algorithm \ref{alg:dstumps} describes how a decision stump works. Takes in input the training set $S$ with $d$ feature and $n$ points and a weight vector $w$. It starts with initializing the constant classifier $\gamma_{0} = 1$ which is equivalent to a positive stump with $\theta < x_{1}^{(j)}$ and sets it as the best edge $\gamma^{*}$. Then it starts looping through all (numeric) features. For each feature, it will search for a better stump than $\gamma^{*}$ between non identical points. In this way, the algorithm will perform an exhaustive search looking for the best decision stump for that training set. 
+respectively for positives and negatives stumps.\\
+Algorithm \ref{alg:dstumps} describes the implementation of a decision stump. Takes as input the training set $S$ with $d$ feature and $n$ points and a weight vector $w$. It starts with initializing the constant classifier $\gamma_{0} = 1$ which is equivalent to a positive stump with $\theta < x_{1}^{(j)}$ and sets the best edge $\gamma^{*} = \gamma_{0}$. Then it starts looping through all the $d$ features. For each feature, it will search for a better stump than $\gamma^{*}$ between non identical points. In this way, the algorithm will perform an exhaustive search looking for the best decision stump for that training set.
+\\\textbf{[TODO]} describe w vector \textbf{[ENDTODO]}
 \begin{algorithm}[htpb]
 	\caption{}
 	\label{alg:dstumps}
@@ -42,9 +43,9 @@ Algorithm \ref{alg:dstumps} describes how a decision stump works. Takes in input
 				\EndIf
 			\EndFor
 		\EndFor
-		\If{$\gamma^{*} = \gamma$}
-			\Return $h_{0}\times\text{sign}(\gamma_{0}$)
-		\Else
+		\If{$\gamma^{*} = \gamma$}{}
+			\Return $h_{0}\times\text{sign}(\gamma_{0})$
+		\Else{}
 			\Return $h_{j^{*},\theta^{*}}+\times\text{sign}(\gamma^{*})$
 		\EndIf
 		\EndProcedure
