added operator \argmax

--- a/report/main.tex
+++ b/report/main.tex
@@ -9,6 +9,7 @@
 \usepackage{amsmath}
 \usepackage[noend]{algpseudocode}
 \usepackage{algorithm}
+\DeclareMathOperator*{\argmax}{argmax}
 
 \begin{document}
 \title{Forest cover type classification using AdaBoost}
