added amssymb; input for bagging.tex

--- a/report/main.tex
+++ b/report/main.tex
@@ -5,10 +5,12 @@
 \usepackage{graphicx}
 \usepackage{minted}
 \usepackage{amsfonts}
+\usepackage{amssymb}
 \usepackage{mathtools}
 \usepackage{amsmath}
 \usepackage[noend]{algpseudocode}
 \usepackage{algorithm}
+
 \DeclareMathOperator*{\argmax}{argmax}
 
 \begin{document}
@@ -22,6 +24,7 @@
 \input introduction.tex
 \input decisionstumps.tex
 \input adaboost.tex
+\input bagging.tex
 \input onevsall.tex
 
 
