--- a/report/crossvalidation.tex
+++ b/report/crossvalidation.tex
@@ -9,3 +9,26 @@ Where $\mathcal{D}$ is the data distribution and $A$ is the learning algorithm. 
 	S \equiv \lbrace (x_{1},y_{y}),\;\dots\;,(x_{m},y_{m}) \rbrace
 \end{align*}
 Now we have to partition $\mathcal{D}$ in $K$ subsets, or ``folds'' of size $m/K$ each. For each of the $\mathcal{D}_{k}$ partition, we want to take one as the test set (also called validation set) and let all the others be the training set. At each $k$ cycle, the algorithm $A$ will be training on the subsets chosen to be the training set and then will be evaluated over the subset chosen to be the test set. Finally, the results of all the evaluation can be averaged to have an average loss of $A$ over $\mathcal{D}$.
+
+\begin{algorithm}[htpb]
+	\caption{}
+	\label{alg:crossvalidation}
+	\begin{algorithmic}[1]
+		\Procedure{CrossValidation}{$L(\cdot,\cdot), \mathcal{D}, K, T$}
+		\State $\ell_{S} \gets 0$
+		\State $\ell_{\mathcal{D}} \gets 0$
+		\For{$k=1 \textbf{ to } K$}
+			\State $size \gets \min(\frac{m}{K}, |\mathcal{D}|)$
+			\State $\mathcal{D}_{k} \equiv \lbrace d_{i} \;|\; d_{i} \in \mathcal{D} \:\;\;0 \leq i \leq size\rbrace$
+			\State $\mathcal{D} \gets \mathcal{D}\setminus\mathcal{D}_{k}$
+		\EndFor
+		\For{$k=1 \textbf{ to } K$}
+			\State $S_{k} \gets \mathcal{D}_{k}$
+			\State $V_{k} \gets \mathcal{D}_{k}\setminus S_{k}$
+			\State $\ell_{S} \gets \ell_{S} + \ell(L(S_{k}, T))$
+			\State $\ell_{\mathcal{D}} \gets \ell_{\mathcal{D}} + \ell(L(V_{k}, T)) $
+		\EndFor
+		\Return $(\frac{\ell_{S}}{K},\frac{\ell_{\mathcal{D}}}{K})$
+		\EndProcedure
+	\end{algorithmic}
+\end{algorithm}
