typo in algorithm

--- a/report/decisionstumps.tex
+++ b/report/decisionstumps.tex
@@ -24,7 +24,7 @@ respectively for positives and negatives stumps.\\
 Algorithm \ref{alg:dstumps} describes the implementation of a decision stump. Takes as input the training set $S$ with $d$ feature and $n$ points and a weight vector $w$. It starts with initializing the constant classifier $\gamma_{0} = 1$ which is equivalent to a positive stump with $\theta < x_{1}^{(j)}$ and sets the best edge $\gamma^{*} = \gamma_{0}$. Then it starts looping through all the $d$ features. For each feature, it will search for a better stump than $\gamma^{*}$ between non identical points. In this way, the algorithm will perform an exhaustive search looking for the best decision stump for that training set.
 \\\textbf{[TODO]} describe w vector \textbf{[ENDTODO]}
 \begin{algorithm}[htpb]
-	\caption{}
+
 	\label{alg:dstumps}
 	\begin{algorithmic}[1]
 		\Procedure{DecisionStump}{$S$, $w$}
@@ -46,7 +46,7 @@ Algorithm \ref{alg:dstumps} describes the implementation of a decision stump. Ta
 		\If{$\gamma^{*} = \gamma$}{}
 			\Return $h_{0}\times\text{sign}(\gamma_{0})$
 		\Else{}
-			\Return $h_{j^{*},\theta^{*}}+\times\text{sign}(\gamma^{*})$
+			\Return $h_{j^{*},\,\theta^{*}+}\times\text{sign}(\gamma^{*})$
 		\EndIf
 		\EndProcedure
 	\end{algorithmic}
