commented bibliography because it's empty

--- a/report/main.tex
+++ b/report/main.tex
@@ -27,9 +27,9 @@
 \input bagging.tex
 \input onevsall.tex
 \input crossvalidation.tex
+\input results.tex
 
-
-\bibliographystyle{plain}
-\bibliography{local}
+%\bibliographystyle{plain}
+%\bibliography{local}
 
 \end{document}
