--- a/report/main.tex
+++ b/report/main.tex
@@ -10,6 +10,7 @@
 \usepackage{amsmath}
 \usepackage[noend]{algpseudocode}
 \usepackage{algorithm}
+\usepackage[font={small,it}]{caption}
 
 \DeclareMathOperator*{\argmax}{argmax}
 
