added dataset chapter

--- a/report/main.tex
+++ b/report/main.tex
@@ -23,6 +23,7 @@
 \tableofcontents
 
 \input introduction.tex
+\input datasetview.tex
 \input decisionstumps.tex
 \input adaboost.tex
 \input bagging.tex
