--- a/report/datasetview.tex
+++ b/report/datasetview.tex
@@ -39,8 +39,8 @@ The dataset provided contains information about forest cover types. It contains 
 \begin{figure}[htpb]
 	\centering
 	\begin{tabular}{cc}
-		\includegraphics[scale=0.45]{figs/1.pdf}	& \includegraphics[scale=0.45]{figs/2.pdf}\\ 
-		\includegraphics[scale=0.45]{figs/3.pdf} & \includegraphics[scale=0.45]{figs/4.pdf} \\ 
+		\includegraphics[scale=0.45]{figs/1.eps}	& \includegraphics[scale=0.45]{figs/2.eps}\\ 
+		\includegraphics[scale=0.45]{figs/3.eps} & \includegraphics[scale=0.45]{figs/4.eps} \\ 
 	\end{tabular} 
 	\caption{Four examples of labeled record}
 	\label{fig:plots}
