--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -14,5 +14,6 @@ This project has been implemented in C++ and the whole code-base can be found on
 	... & ... & ... & ... & ... & ... & ... & ... & ... \\
 \end{tabular}
 \end{center} 
-where the first three number are respectively the sample size (e.g. number of rows), the number of features (e.g. the number of columns) and the number of labels; in the second row, there are all the labels imported from the original data-set and finally all the samples. In this project, the data-set in input contains only real number, hence for simplicity all the entries are evaluated and treated as \texttt{double}s.\\
-The program start by importing the parsed data-set, saved with the format \textit{ab} (for no particular reasons). It then starts the training of both AdaBoost and Bagging with the One-Vs-All multi-class technique, due to the fact that this is not a binary problem. Those two instances are encapsulated in two different cross-validation instances. An unlimited \textit{for-loop} is then launched. Each cycle of this loop has been called an ``epoch'', and the iteration number is the hyper-parameter given to both Bagging and AdaBoost.
+where the first three number are respectively the sample size (e.g. number of rows), the number of features (e.g. the number of columns) and the number of labels; in the second row there the labels imported from the original data-set and finally there are all the samples, with the label in the first column and the data-point as the other columns. In this project, the input data-set contains only real numbers, hence for simplicity all the entries are evaluated and treated as \texttt{double}s.
+
+The program starts by importing the parsed data-set, saved with the extension \textit{ab}. It then starts the training of both the AdaBoost and Bagging algorithms with the One-Vs-All multi-class technique, since this is not a binary classification problem. An infinite \textit{loop} is then launched. Each cycle of this loop has been called an ``epoch'', and the iteration number is the $T$ parameter given to both the Bagging and AdaBoost algorithms.
