--- a/report/datasetview.tex
+++ b/report/datasetview.tex
@@ -1,7 +1,7 @@
-% !TeX spellcheck=eng
+% !TeX spellcheck = en_US
 
 \chapter{The Dataset}
-The dataset provided contains information about forest cover types. It contains seven typologies of forests labeled from $1$ to $7$, fiftyfour features listed in \autoref{tab:fetaures} along with an identification number and a column which contains the label associated to the record.
+The dataset provided contains information about forest cover types. It contains seven kinds of forests labeled from $1$ to $7$, $54$ features listed in \autoref{tab:features} along with an identification number and a column which contains the label associated to the record.
 \begin{table}[htpb]
 	\centering
 \begin{tabular}{|c|c|}
@@ -28,13 +28,13 @@ The dataset provided contains information about forest cover types. It contains 
 	\hline 
 	Horizontal distance to fire points & meters \\ 
 	\hline 
-	Wilderness area & $\lbrace0, 1\rbrace$ \\ 
+	Wilderness area & $\lbrace0, 1\rbrace^{4}$ \\ 
 	\hline 
-	Soil type & $\lbrace0, 1\rbrace$ \\ 
+	Soil type & $\lbrace0, 1\rbrace^{40}$ \\ 
 	\hline 
 \end{tabular}
-\caption{Table of the features provided by the dataset. The ``Wilderness area'' feature is divided in four binary columns one for each area studied, as for the ``Soil type'' feature which is divided in fourty binary columns.}
-\label{tab:fetaures}
+\caption{Table of the features present in the dataset. The ``Wilderness area'' feature is divided in $4$ binary columns one for each area studied, as for the ``Soil type'' feature which is divided in $40$ binary columns.}
+\label{tab:features}
 \end{table}
 \begin{figure}[htpb]
 	\centering
@@ -45,4 +45,4 @@ The dataset provided contains information about forest cover types. It contains 
 	\caption{Four examples of labeled record}
 	\label{fig:plots}
 \end{figure}
-In \figurename~\ref{fig:plots} we provide four examples of labeling based only by two feature per plot. In the first row and in the first plot of the second row, the labels are well ``separated'', suggesting that some of those features could be a strong candidate for classification. The last plot, located in the bottom\-right of the image, do not separate well the seven labels, suggesting that the Horiontal distance to hydrology combined (only) with the Hillshade 9am features are not good features in order to classify with a low statistical risk.
+In \figurename~\ref{fig:plots} we provide four examples of scatter plots based on two features per plot. In the first row and in the first plot of the second row, the labels are well ``separated'', suggesting that some of those features could be a strong candidate to aid classification. The last plot, located in the bottom\-right corner, does not separate as well the different labels, suggesting that the Horizontal distance to hydrology combined (only) with the Hillshade 9am feature are not as good features as the others.
