--- a/report/decisionstumps.tex
+++ b/report/decisionstumps.tex
@@ -23,10 +23,10 @@ h_{j,\theta-}(x) =
 \end{cases}
 \end{align}
 for \textit{positive} and \textit{negative} decision stumps respectively.\\
-Algorithm \ref{alg:dstumps1} describes a way to find the best decision stump given a set of weighted points. It takes in input the training set $S$ with $d$ features and $n$ points and a weight vector $w$. It starts by setting $\gamma_{0}$ with the constant classifier $\gamma_{0} = 1$ which is equivalent to a positive stump with $\theta < x_{1}^{(j)}$ and sets the best edge $\gamma^{*} = \gamma_{0}$. Then it starts looping through all the $d$ features. For each feature, it will search for a better stump than $\gamma^{*}$ between non identical points. In this way, the algorithm will perform an exhaustive search looking for the best decision stump for that training set.
+Algorithm \ref{alg:dstumps1} describes a way to find the best decision stump given a set of weighted points. It takes in input the training set $S$ with $d$ features and $n$ points and a weight vector $w$. It starts by setting $\gamma_{0}$ with the constant classifier $\gamma_{0} = 1$ which is equivalent to a positive stump with $\theta < x_{1}^{(j)}$ and keeps the best current classifier $\gamma^{*}$ initially set as $\gamma^{*} = \gamma_{0}$. Then it starts looking through all the $d$ features. For each feature, it will search for the best decision stump, and if it's better than $\gamma^{*}$ it updates it. In this way, the algorithm will perform an exhaustive search looking for the best decision stump for that training set given those weights.
 \begin{algorithm}[htpb]
 
-	\label{alg:dstumps1}
+	
 	\begin{algorithmic}[1]
 		\Procedure{DecisionStump}{$S$, $w$}
 		\State $\gamma_{0} \gets \sum_{i=0}^{n}w_{i}y_{i}$
@@ -50,5 +50,7 @@ Algorithm \ref{alg:dstumps1} describes a way to find the best decision stump giv
 			\Return $h_{j^{*},\,\theta^{*}+}\times\text{sign}(\gamma^{*})$
 		\EndIf
 		\EndProcedure
+		\label{alg:dstumps1}
 	\end{algorithmic}
+
 \end{algorithm}
