--- a/report/adaboost.tex
+++ b/report/adaboost.tex
@@ -1,22 +1,23 @@
 % !TeX spellcheck = en_US
 
 \chapter{AdaBoost}
-	The AdaBoost learning meta-algorithm combines the results of a sequence of basic classifiers with a weighted sum into a predictor $f$. \\
-	Let the training set be $S=\lbrace (x_{1}, y_{1}),\; \dots\;, (x_{m}, y_{m}) \rbrace$, and be $T$ the hyper-parameter which tells AdaBoost how many iteration must run to perform the prediction. $T$ can be set, for example, through cross validation. Given a base predictor $h_{i} \in \mathbb{H}\;$, which is the set of the base predictors, for each iteration $i = 1,\;\dots\;,T$ we set a coefficient $\alpha_{i}$. The base classifier $h_{i}$ is a simple binary classifier of the form $h:\mathbb{R}^{d}\to\lbrace-1, 1\rbrace$; the  predictor $f$ is then formally described as follow:
+	The AdaBoost learning meta-algorithm combines the results of a sequence of basic classifiers with a weighted sum into a predictor $f$.
+	
+	Let the training set be $S=\lbrace (x_{1}, y_{1}),\; \dots\;, (x_{m}, y_{m}) \rbrace$, and be $T$ the hyper-parameter which tells AdaBoost how many iteration must run to perform the prediction (in other words, how many base classifiers it will create). $T$ can be set, for example, through cross validation. Given a base predictor $h_{i} \in \mathbb{H}\;$, which is the set of the base predictors, for each iteration $i = 1,\;\dots\;,T$ we create a new predictor $h_i$ and calculate a coefficient $\alpha_{i}$ for it. The base classifier $h_{i}$ is a simple binary classifier of the form $h:\mathbb{R}^{d}\to\lbrace-1, 1\rbrace$; the  predictor $f$ is then formally described as follow:
 	\begin{align*}
 		f(x) = \sum_{t=1}^{T}\alpha_{t}h_{t}(x)
 	\end{align*}
 	Where $\alpha_{1},\;\dots\;,\alpha_{T}$ are the weight coefficients and are set to be
 	\begin{align}
 		\label{eq:alpha_def}
-		\alpha_{t} = \frac{1}{2}\ln \Big( \frac{1-\varepsilon{t}}{\varepsilon_{t}} \Big) \;\;\;\; \forall t=1,\;\dots\;,T
+		\alpha_{t} = \frac{1}{2}\ln \Big( \frac{1-\varepsilon_{t}}{\varepsilon_{t}} \Big) \;\;\;\; \forall t=1,\;\dots\;,T
 	\end{align}
-	and $\varepsilon_{t}$ is the weighted error of $h_{t}$. Each weighted error is given by the weighted sum
+	where $\varepsilon_{t}$ is the weighted error of $h_{t}$. Each weighted error is given by the weighted sum
 	\begin{align*}
 		\varepsilon_{t} = \sum_{i=1}^{n} w_{i}^{(t)}\mathbb{I}\big\lbrace h^{(t)}(x_{i}) \neq y_{i} \big\rbrace
 	\end{align*}
 	Where $w_{i}$ for $i = 1,\;\dots\;, n$ is a weight distribution over the data points, initially set uniformly and updated successively in each iteration.\\\\
-	In order to minimize the AdaBoost's training error $\hat{\ell}(f)$ over the training set $S$, the values of $\alpha_{t}$s are chosen to be its zero derivative, which is
+	In order to minimize AdaBoost's training error $\hat{\ell}(f)$, the values of $\alpha_{t}$ are chosen to be the ones which minimize the error as in \ref{eq:alpha_def}. The training error is bounded by:
 	\begin{align*}
 		\hat{\ell}_{S}(f) \leq \prod_{t=1}^{T}\big( e^{-\alpha_{t}}(1-\varepsilon_{t}) + e^{\alpha_{t}}\varepsilon_{t} \big)
 	\end{align*}
@@ -25,7 +26,7 @@ The AdaBoost algorithm is described by (\ref{alg:adaboost}) and takes the follow
 \begin{itemize}
 	\item $S$ is the training set;
 	\item $BASE(S,\;w^{(t)})$ is the base classifier used by AdaBoost, it takes the training set and the $w^{t}$ vector of weights at each \textit{t-th} iteration;
-	\item $T$ is the number of base classifiers that AdaBoost will create to perform its prediction.
+	\item $T$ is the number of base classifiers that AdaBoost will create to then perform its prediction.
 \end{itemize}
 \begin{algorithm}[htpb]
 	\caption{}
@@ -49,7 +50,7 @@ The AdaBoost algorithm is described by (\ref{alg:adaboost}) and takes the follow
 		\EndProcedure
 	\end{algorithmic}
 \end{algorithm}
-It starts by initializing of the weight vector with the value $1/n$ and updates it at each iteration based on the prediction made by the base classifier stored in $h^{(t)}$. The new values of $w^{(t)}$ are assigned in such a way to maintain the whole vector normalized:
+It starts by initializing the weight vector $w^{(0)}$ with the values $1/n$ and updates it at each iteration based on the prediction made by the base classifier stored in $h^{(t)}$. The new values of $w^{(t)}$ are assigned in such a way to maintain the whole vector normalized:
 \begin{align}
 	\label{eq:w_norm}
 	\sum_{i=1}^{n}w^{(t)}_{i} = 1
@@ -87,9 +88,3 @@ To prove that, noting that line \ref{instr:w_init} of algorithm (\ref{alg:adaboo
 	& = 1
 \end{split}
 \end{equation*}
-
-
-
-
-
-
